# forge

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  REVIEW.md  flake.nix
.github/workflows/: ci.yml  release.yml
cli/: forge
cli/forge.d/: agent.sh  common.sh  message.sh  profile.sh  session.sh
crates/forge-api/: Cargo.toml
crates/forge-api/migrations/: 002_users_and_api_keys.sql  003_tool_output.sql  004_get_next_sequence_locking.sql  005_provider_check.sql  006_session_model_overrides.sql  007_session_embeddings.sql
crates/forge-api/src/: agent_registry.rs  bus.rs  embedding.rs  lib.rs  logging.rs  main.rs  observability.rs  pi_agent.rs  recording.rs  resume.rs  sandbox.rs  session_manager.rs  session_replay.rs  tool_executor.rs
crates/forge-api/src/api/: auth.rs  events.rs  events_integration.rs  middleware.rs  mod.rs  openai.rs  router.rs  sse.rs  turn.rs  voice.rs  web.rs
crates/forge-api/src/db/: mod.rs
crates/forge-api/tests/: e2e_tests.rs  integration_tests.rs  openai_tests.rs  pi_spawn_tests.rs  test_helpers.rs  web_tests.rs
docs/: AGENT-CONVERSATION-DEBUG.md  API.md  ARCHITECTURE.md  CLI.md  OPERATIONS.md  README.md  SCHEDULED-AGENTS.md  SEARCH-TOOL.md  TOOL-AUDIT-LOG.md
examples/: agents.yaml
examples/agents/foo-bot/: AGENTS.md  agent.yaml  heartbeat.md
extensions/forge-tools/: package-lock.json  package.json
extensions/forge-tools/src/: index.ts
migrations/: 001_initial_schema.sql
sandbox/: build.sh  default.nix
scripts/: forge-agent-setup  forge-heartbeat  git-credential-forge  install.sh  setup.sh  test-api.sh  uninstall.sh
skills/: README.md
skills/search-cli/: SKILL.md
systemd/: forge-api.service  forge.env.example
systemd/agents/: forge-agent@.service  forge-agent@.timer
web/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
