[workspace]
resolver = "2"
members = [
    "crates/forge-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Forge Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tokio-util = "0.7"
futures-util = "0.3"
tokio-stream = "0.1"
