[package]
name = "forge-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Crate-specific
tokio-util = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }

# Authentication
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
reqwest = { workspace = true }
http = "1"
